# Luna-new-architecture

./: .env.example  .gitignore  README.md  pyproject.toml
config/: models.yaml  paths.yaml  runtime.yaml  server.yaml  tools.yaml
docs/: archive-tools.md  web-tools.md
identity/: boundaries.md  canon.md  shell.md
luna/: __init__.py
luna/api/: __init__.py  routes.py  server.py
luna/archive/: __init__.py  _common.py  artifact_writer.py  reader.py  search.py
luna/channels/: __init__.py  base.py
luna/context/: builder.py  recent_events.py
luna/ledger/: __init__.py  writer.py
luna/models/: __init__.py  base.py  openai.py  whooshd.py
luna/reducer/: current_state.py  reducer.py
luna/tools/: config.py  executor.py  protocol.py  receipts.py  registry.py  transport.py  web_tools.py
luna/web/: __init__.py  fetch.py  (+2 more)
luna_runtime.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
schemas/: continuity_entry.schema.json  world_event.schema.json
scripts/: archive_tools_smoke_test.py  build_context.py  email_bootstrap_oauth.py  gmail_oauth_test.py  run_reducer.py  web_tools_smoke_test.py  write_debug_prompt.py
tests/: test_archive_reader.py  test_archive_search.py  test_artifact_writer.py  test_chat_regression.py  test_email_inbox.py  test_email_oauth.py  test_recent_events.py  test_reducer.py  test_tool_loop.py  test_tool_receipts.py  test_tool_registry.py  test_tool_transport.py  test_tools_config.py  test_web_config.py  test_web_fetch.py  test_web_providers.py  test_web_search.py  test_web_security.py  test_web_tool_loop.py
web/: index.html
(+16 files in other folders)
