[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "luna-runtime"
version = "0.1.0"
description = "Event-sourced runtime for Luna"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "PyYAML>=6,<7",
  "uvicorn[standard]>=0.34,<1",
]

[project.scripts]
luna-server = "luna.api.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["luna*"]
